TLS-Offloading-and-Load-Balancer/Without-Cert-Manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  tls:
    - hosts:
        - localhost.s7em.com
      secretName: tls-secret
  rules:
    - host: localhost.s7em.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-app-service
                port:
                  number: 8080
